# slambook

./: README
ch10/: pose_graph_g2o_SE3.cpp  pose_graph_g2o_lie_algebra.cpp
ch11/: feature_training.cpp  gen_vocab_large.cpp  loop_closure.cpp
ch12/dense_RGBD/: octomap_mapping.cpp  pointcloud_mapping.cpp  surfel_mapping.cpp
ch12/dense_mono/: dense_mapping.cpp
ch13/: CMakeLists.txt
ch13/app/: CMakeLists.txt  run_kitti_stereo.cpp
ch13/config/: default.yaml
ch13/include/myslam/: algorithm.h  backend.h  camera.h  common_include.h  config.h  dataset.h  feature.h  frame.h  frontend.h  g2o_types.h  map.h  mappoint.h  viewer.h  visual_odometry.h
ch13/src/: CMakeLists.txt  backend.cpp  camera.cpp  config.cpp  dataset.cpp  feature.cpp  frame.cpp  frontend.cpp  map.cpp  mappoint.cpp  viewer.cpp  visual_odometry.cpp
ch13/test/: CMakeLists.txt
ch2/: CMakeLists.txt  helloSLAM.cpp  libHelloSLAM.cpp  libHelloSLAM.h  useHello.cpp
ch3/examples/: CMakeLists.txt  coordinateTransform.cpp  plotTrajectory.cpp
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
ch3/useGeometry/: CMakeLists.txt  eigenGeometry.cpp
ch3/visuallizeGeometry/: visualizeGeometry.cpp
ch4/: useSophus.cpp
ch4/example/: trajectoryError.cpp
ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp  undistortImage.cpp
ch5/rgbd/: jointMap.cpp
ch5/stereo/: stereoVision.cpp
ch6/: ceresCurveFitting.cpp  g2oCurveFitting.cpp  gaussNewton.cpp
ch7/: orb_cv.cpp  orb_self.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp  triangulation.cpp
ch8/: direct_method.cpp  optical_flow.cpp
ch9/: SnavelyReprojectionError.h  bundle_adjustment_ceres.cpp  bundle_adjustment_g2o.cpp  common.cpp  common.h  random.h  rotation.h
